--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body style="background-color: #ff9;">
-    
+    <h1>Пример сайта</h1>
+
+    <script type="text/javascript" src="js/script.js"></script> <!-- в конце дока, т.к помни про последовательность загрузки-->  
+
 </body>
 </html> 
